crates/git-reflow-cli/tests/snapshots/pr__pr_command_creates_separate_pull_requests.snap
---
source: crates/git-reflow-cli/tests/pr.rs
expression: "String::from_utf8_lossy(&assert.get_output().stdout)"
---
[
  {
    "number": 1347,
    "url": "https://github.com/octocat/Hello-World/pull/1347",
    "title": "chore: release v1.1.0",
    "body": "---\npackages:\n- name: example-rust-workspace\n  version: 1.1.0\n---\n\n## [1.1.0] - [DATE]\n\n### 🚀 Features\n\n- *(api)* Add a `subtract` function\n",
    "head": "reflow--branches--main--example-rust-workspace",
    "base": "main",
    "existing": false,
    "packages": [
      {
        "name": "example-rust-workspace",
        "version": "1.1.0",
        "changelog_md": "## [1.1.0] - [DATE]\n\n### 🚀 Features\n\n- *(api)* Add a `subtract` function"
      }
    ]
  },
  {
    "number": 1347,
    "url": "https://github.com/octocat/Hello-World/pull/1347",
    "title": "chore(example-api): release v1.1.0",
    "body": "---\npackages:\n- name: example-api\n  version: 1.1.0\n---\n\n## [1.1.0] - [DATE]\n\n### 🚀 Features\n\n- *(api)* Add a `subtract` function\n",
    "head": "reflow--branches--main--example-api",
    "base": "main",
    "existing": false,
    "packages": [
      {
        "name": "example-api",
        "version": "1.1.0",
        "changelog_md": "## [1.1.0] - [DATE]\n\n### 🚀 Features\n\n- *(api)* Add a `subtract` function"
      }
    ]
  }
]
