crates/git-reflow-cli/tests/snapshots/pr__pr_command_with_dry_run.snap
---
source: crates/git-reflow-cli/tests/pr.rs
expression: "String::from_utf8_lossy(&assert.get_output().stdout)"
---
[
  {
    "number": 0,
    "url": "",
    "head": "reflow--branches--main",
    "base": "main",
    "existing": false,
    "packages": [
      {
        "name": "example-rust-workspace",
        "version": "1.1.0"
      },
      {
        "name": "example-api",
        "version": "1.1.0"
      }
    ]
  }
]
